--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,6 +1,5 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -81,37 +80,46 @@ header {
     .nav-bar {
         padding: 1.5rem 4rem;
     }
+
     .nav-item {
         display: none;
     }
+
     .login-button {
         display: none;
     }
+
     .mobile-menu-icon {
         display: block;
     }
+
     .mobile-menu-icon button {
         background-color: transparent;
         border: none;
         cursor: pointer;
     }
+
     .mobile-menu ul {
         display: flex;
         flex-direction: column;
         text-align: center;
         padding-bottom: 1rem;
     }
+
     .mobile-menu .nav-item {
         display: block;
         padding-top: 1.2rem;
     }
+
     .mobile-menu .login-button {
         display: block;
         padding: 1rem 2rem;
     }
+
     .mobile-menu .login-button button {
         width: 100%;
     }
+
     .open {
         display: block;
     }
@@ -119,36 +127,36 @@ header {
 
 .slider {
     margin: 25px auto;
-    width: 100%; 
-    height: auto; 
-    max-width: 800px; 
-    max-height: 800px; 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
+    width: 100%;
+    height: auto;
+    max-width: 800px;
+    max-height: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 
 .slider {
-    background-color: #fff; 
-    opacity: 0.95; 
+    background-color: #fff;
+    opacity: 0.95;
 }
 
 .slider:hover {
-    transform: translateY(-5px); 
+    transform: translateY(-5px);
     transition: transform 0.3s ease;
 }
 
 .presentation-text {
     margin: 25px auto;
-    width: 90%; 
+    width: 90%;
     max-width: 1000px;
     height: auto;
     border: 2px solid #3478e5;
-    border-radius: 10px; 
+    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
 }
@@ -163,15 +171,15 @@ header {
     text-align: center;
 }
 
-#card{
+#card {
     color: black;
-    background:transparent;
+    background: transparent;
     border: 2px solid black;
     border-radius: 20px;
     margin-top: 40%;
 }
 
-.search-box{
+.search-box {
     position: absolute;
     left: 85%;
     top: 30%;
@@ -197,10 +205,11 @@ header {
     transition: 0.5s;
 }
 
-.search-txt::placeholder{
+.search-txt::placeholder {
     color: rgb(190, 188, 188);
 }
-.search-btn{
+
+.search-btn {
     height: 40px;
     width: 40px;
     border-radius: 50%;
@@ -210,7 +219,151 @@ header {
     align-items: center;
 }
 
-.search-box:hover > .search-txt{
+.search-box:hover>.search-txt {
     width: 240px;
     padding: 0 6px;
+}
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+/* Conteúdo da barra lateral */
+.sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-right: 50px;
+}
+
+.openbtn {
+    font-size: 15px;
+    cursor: pointer;
+    background-color: #f3f9fb;
+    color: black;
+    padding: 10px 15px;
+    border: none;
+}
+
+.openbtn:hover {
+    background-color: #444;
+}
+
+/* Conteúdo da página principal */
+#main {
+    transition: margin-right .5s;
+    padding: 16px;
+}
+
+.sidebar .welcome-text {
+    margin-top: 20px;
+    margin-left: 32px;
+    font-size: 30px;
+}
+
+.sidebar .logout-btn {
+    margin-top: 20px;
+    padding: 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    background-color: #111;
+    border: none;
+    cursor: pointer;
+}
+
+.sidebar .logout-btn:hover {
+    color: #f1f1f1;
+}
+
+.pet-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.pet-card {
+    background-color: rgba(255, 255, 255, 0.7);
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    float: left;
+    position: relative;
+}
+
+.pet-img {
+    width: 100%;
+    height: auto;
+}
+
+.pet-info {
+    padding: 10px;
+}
+
+
+.add-pet-form {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.add-pet-form-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    border-radius: 5px;
+    width: 80%;
+}
+
+.add-pet-card {
+    float: right;
+    margin-right: 15px;
+}
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
